Update .gitignore to exclude .next directory and remove .next files from tracking

--- a/.gitignore
+++ b/.gitignore
@@ -12,6 +12,12 @@ dist
 dist-ssr
 *.local
 /node_modules
+
+# Next.js
+.next/
+out/
+build/
+
 # Editor directories and files
 .vscode/*
 !.vscode/extensions.json
